fix: call to action wrap white spaces

--- a/src/pages/sitehome/calltoaction/calltoaction.scss
+++ b/src/pages/sitehome/calltoaction/calltoaction.scss
@@ -2,7 +2,7 @@
     background-image: url('../../../../public/assets/bv-footer-banner.png');
     background-repeat: no-repeat;
     background-size: cover;
-    height: 910px;
+    height: 820px;
     position: relative;
     display: flex;
     justify-content: center;
